letter spacing fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -26,7 +26,6 @@ p {
 }
 
 h1 {
-  letter-spacing: 2px;
   color: whitesmoke;
   text-shadow: 1px 1px 5px gray;
   font-family: 'Oswald', san-serif;
